Replace deprecated URL constructor (#6882)
* Replace deprecated URL constructor

* Use 'new URI()' instead of 'Paths.get()' in 'MetadataFormatConversion.java'